--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -13,7 +13,9 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <div class="navbar-nav">
             {% if app.user %}
-                <a class="nav-link" href="{{ path('messaging', {'slug':app.user.slug}) }}"><i class="fas fa-envelope-open"></i>&nbsp;Messages</a>
+                <a class="nav-link" href="{{ path('messaging', {'slug':app.user.slug}) }}"><i class="fas fa-envelope-open"></i>&nbsp;Messages
+                    {% if unread_messages > 0 %}<span class="badge badge-danger" id="unread-messages" style="display: inline;">{{ unread_messages }}</span>{% endif %}
+                </a>
                 <a class="nav-link" href="#"><i class="fas fa-plane-departure"></i>&nbsp;Mes BizTrip</a>
             {% else %}
                 <a class="nav-item nav-link active" href="#">{{ 'menu.home_home'|trans|raw }} <span class="sr-only">(current)</span></a>
