work on deletion of conversation and add modal window to confirm deletion

--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -119,3 +119,9 @@ body {
 .badge-happyDarkBlue {
   color: #ffffff;
 }
+
+.badge-red {
+  background-color: #dc143c;
+  color: #ffffff;
+  font-weight: normal;
+}
