--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -141,7 +141,7 @@
         </div>
     </div>
     {# for datapicker customization #}
-    <input type="hidden" id="language" data-lang = "{{ app.request.locale }}"/>
+    <input type="hidden" id="language" data-lang = "{{ app.request.locale }}">
 </div>
 {% endblock %}
 
