--- a/templates/partials/_listProfile.html.twig
+++ b/templates/partials/_listProfile.html.twig
@@ -149,4 +149,4 @@
 <input type="hidden" id="dropItemText" data-delrelation="{{ 'delete.relation'|trans|raw }}">
 {# error message for json request #}
 <input type="hidden" id="msgerr" data-errone = "{{ 'json.msg.error_1'|trans|raw }}"
-data-errtwo = "{{ 'json.msg.error_2'|trans|raw }}"/>
+data-errtwo = "{{ 'json.msg.error_2'|trans|raw }}">
