--- a/templates/partials/modals/_modalUpdateAvatar.html.twig
+++ b/templates/partials/modals/_modalUpdateAvatar.html.twig
@@ -12,7 +12,7 @@
                 <img src= "" alt="{{ 'alt.avatar'|trans|raw }} {{ user.pseudo }}" class="avatar" id="imgModalAvatar">
             </div>
             <div class="modal-footer modal-avatar">
-                <input type="file" id="uploadFile" accept="image/png, image/jpeg, image/jpg" hidden="hidden"/>
+                <input type="file" id="uploadFile" accept="image/png, image/jpeg, image/jpg" hidden="hidden">
                 <button type="button" class="btn btn-modal-avatar btn-sm mr-2 shadow-none" id="btnChangeAvatar"><i class="fas fa-camera-retro"></i> {{ 'btn.change'|trans|raw }}</button>
                 <button type="button" class="btn btn-modal-avatar btn-sm mr-2 shadow-none" id="btnDelAvatar"><i class="far fa-trash-alt"></i> {{ 'btn.delete'|trans|raw }}</button>
                 <button type="button" class="btn btn-modal-avatar btn-sm mr-auto shadow-none" data-dismiss="modal">
