--- a/templates/profile/showProfile.html.twig
+++ b/templates/profile/showProfile.html.twig
@@ -96,7 +96,7 @@
                         <p class="border-bottom border-gray pb-2 mb-0">L'intelligence artificielle au coeur de l'industrie
                         <small class="float-right mt-1 pb-2">11/06/2020</small></p>
                         <div class="media text-muted pt-3">
-                          <svg class="bd-placeholder-img mr-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 32x32"><title>Placeholder</title><rect width="100%" height="100%" fill="#007bff"/><text x="50%" y="50%" fill="#007bff" dy=".3em">32x32</text></svg>
+                          <svg class="bd-placeholder-img mr-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 32x32"><title>Placeholder</title><rect width="100%" height="100%" fill="#007bff"><text x="50%" y="50%" fill="#007bff" dy=".3em">32x32</text></svg>
                           <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
                             <strong class="d-block text-gray-dark">@username</strong>
                             Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
@@ -107,7 +107,7 @@
                         <p class="border-bottom border-gray pb-2 mb-0">L'intelligence artificielle au coeur de l'industrie
                         <small class="float-right mt-1 pb-2">11/06/2020</small></p>
                         <div class="media text-muted pt-3">
-                          <svg class="bd-placeholder-img mr-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 32x32"><title>Placeholder</title><rect width="100%" height="100%" fill="#007bff"/><text x="50%" y="50%" fill="#007bff" dy=".3em">32x32</text></svg>
+                          <svg class="bd-placeholder-img mr-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 32x32"><title>Placeholder</title><rect width="100%" height="100%" fill="#007bff"><text x="50%" y="50%" fill="#007bff" dy=".3em">32x32</text></svg>
                           <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
                             <strong class="d-block text-gray-dark">@username</strong>
                             Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
@@ -118,7 +118,7 @@
                         <p class="border-bottom border-gray pb-2 mb-0">L'intelligence artificielle au coeur de l'industrie
                         <small class="float-right mt-1 pb-2">11/06/2020</small></p>
                         <div class="media text-muted pt-3">
-                          <svg class="bd-placeholder-img mr-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 32x32"><title>Placeholder</title><rect width="100%" height="100%" fill="#007bff"/><text x="50%" y="50%" fill="#007bff" dy=".3em">32x32</text></svg>
+                          <svg class="bd-placeholder-img mr-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 32x32"><title>Placeholder</title><rect width="100%" height="100%" fill="#007bff"><text x="50%" y="50%" fill="#007bff" dy=".3em">32x32</text></svg>
                           <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
                             <strong class="d-block text-gray-dark">@username</strong>
                             Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
@@ -131,12 +131,7 @@
                 </div>
             </div>
         </div>
-        
-
-        
-
     </div>
-   
 {% endblock %}
 
 {% block javascripts %}
