--- a/templates/partials/modals/_modalDeleteDiscussion.html.twig
+++ b/templates/partials/modals/_modalDeleteDiscussion.html.twig
@@ -1,21 +1,22 @@
 <div class="modal fade" id="deleteDiscussionModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="modalLabel">{{ 'modal.title.discussion_delete'|trans|raw }}</h5>
+              <h6 class="modal-title" id="modalLabel">{{ 'modal.title.discussion_delete'|trans|raw }}</h6>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
             <div class="modal-body">
-                <p>T'es sûr de vouloir supprimer ?</p>
+                <p class="p-modal"><strong>{{ 'generic.warning'|trans|raw }}</strong>, {{ 'modal.discussion.message_delete1'|trans|raw }}</p>
+                <p class="p-modal">{{ 'modal.discussion.message_delete2'|trans|raw }} <span id="pseudoDiscussionWith">pseudo</span></p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary btn-sm shadow-none" data-dismiss="modal">
-                    <i class="far fa-window-close"></i>  {{ 'btn.cancel'|trans|raw }}
+                <button type="button" class="btn btn-modal-cancel btn-sm shadow-none" data-dismiss="modal">
+                    {{ 'btn.cancel'|trans|raw }}
                 </button>
-                <button type="button" class="btn btn-primary btn-sm shadow-none" data-dismiss="modal">
-                    <i class="far fa-window-close"></i>  {{ 'btn.cancel'|trans|raw }}
+                <button type="button" class="btn btn-modal-confirm btn-sm shadow-none" data-dismiss="modal" id='btn-confirm-del-discussion'>
+                    {{ 'discussion.btn_delete'|trans|raw }}
                 </button>
             </div>
         </div>
