--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -139,6 +139,14 @@ body {
     color: #ffffff;
     font-size: 0.8rem;
   }
+  &.btn-white {
+    background-color: #ffffff;
+    color: #000000;
+    &:hover {
+        background-color: $happyGrey;
+        color: #000000;
+    }
+  }
 }
 
 .p-modal {
