Add loader during upload a new avatar in profile page and add javascript to show/hide advanced search form in list profile page

--- a/templates/messaging/index.html.twig
+++ b/templates/messaging/index.html.twig
@@ -67,7 +67,7 @@
                                     Supprimer la conversation
                                 </button>
                                 <button class="dropdown-item dropdown-item-action" id="DEL_" data-token="{{ csrf_token('tok') }}"
-                                    href="#">Voir le profil
+                                    href="#">Voir le profil de 
                                 </button>
                             </div>
                         </div>
